--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,11 +8,15 @@ body {
 
 body {
   position: relative;
-  font-family: 'Roboto Condensed', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'RobotoDraft', sans-serif;
   font-weight: 300;
-  background-color: #FFFFFF;
+  background-color: #E5E5E5;
   box-sizing: border-box;
   min-height: 100%;
+}
+
+body.open {
+  overflow: hidden;
 }
 
 main {
@@ -20,4 +24,17 @@ main {
   /* Height of the header */
   padding: 60px 16px 16px 16px;
   min-height: 100%;
+}
+
+/** Larger Screens - desktops and tablets **/
+@media all and (min-width: 990px) {
+  main {
+    max-width: 864px;
+    padding-top: 0;
+    min-height: initial;
+  }
+
+  body {
+    overflow-y: scroll;
+  }
 }
