Added basic banner template to polymerize.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -26,6 +26,10 @@ main {
   min-height: 100%;
 }
 
+.banner {
+	text-align: center;
+}
+
 /** Larger Screens - desktops and tablets **/
 @media all and (min-width: 990px) {
   main {
