--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,7 +9,6 @@ body {
 body {
   position: relative;
   font-family: 'RobotoDraft', sans-serif;
-  font-weight: 300;
   background-color: #E5E5E5;
   box-sizing: border-box;
   min-height: 100%;
@@ -26,8 +25,22 @@ main {
   min-height: 100%;
 }
 
+core-header-panel{
+	height: 100%;
+    overflow: auto;
+    -webkit-overflow-scolling: touch;
+    background-color: #e51c23;
+}
+core-toolbar{
+	background-color: #b0120a;
+	color: white;
+}
+
 .banner {
+	width: 80%;
+	margin: 72px auto;
 	text-align: center;
+	color: white;
 }
 
 /** Larger Screens - desktops and tablets **/
