--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -34,12 +34,12 @@ core-header-panel {
 	height: 100%;
     overflow: auto;
     -webkit-overflow-scolling: touch;
-    background-color: #ec407a;
+    background-color: #03A9F4;
 }
 
 core-toolbar {
 	font-weight: 400;
-	background-color: #c2185b;
+	background-color: #fbc02d;
 	color: white;
 }
 
