--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,7 +9,7 @@ body {
 body {
   position: relative;
   font-family: 'RobotoDraft', sans-serif;
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
   box-sizing: border-box;
   min-height: 100%;
 }
@@ -34,7 +34,7 @@ core-header-panel {
 	height: 100%;
     overflow: auto;
     -webkit-overflow-scolling: touch;
-    background-color: #03A9F4;
+    background-color: #673ab7;
 }
 
 core-toolbar {
@@ -47,7 +47,7 @@ core-toolbar {
 	width: 80%;
 	margin: 24px auto;
 	text-align: center;
-	color: white;
+	color: #e5e5e5;
 }
 
 /** Larger Screens - desktops and tablets **/
