Animate fab button, and ripple ink on press.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -55,6 +55,10 @@ core-toolbar {
   background: #f57f17;
 }
 
+.banner-fab::shadow #ripple {
+    color: #fbc02d;
+}
+
 /** Larger Screens - desktops and tablets **/
 @media all and (min-width: 990px) {
   main {
