--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -48,6 +48,7 @@ core-toolbar {
 	margin: 24px auto;
 	text-align: center;
 	color: #be2625;
+  
 }
 
 .banner-fab {
@@ -60,6 +61,14 @@ core-toolbar {
 
 .banner-fab::shadow #ripple {
     color: #e5e5e5;
+}
+.huge{
+ font-family: 'Pacifico', cursive; 
+}
+.large{
+font-family: 'Pacifico', cursive;
+font-family: 'Dancing Script', cursive;
+
 }
 
 /** Larger Screens - desktops and tablets **/
