Code clean up, migrate font rules to specific classes instead of huge and large classes. Remove font from subtitle, it reduced readability.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -62,13 +62,9 @@ core-toolbar {
 .banner-fab::shadow #ripple {
     color: #e5e5e5;
 }
-.huge{
- font-family: 'Pacifico', cursive; 
-}
-.large{
-font-family: 'Pacifico', cursive;
-font-family: 'Dancing Script', cursive;
 
+.title {
+ font-family: 'Pacifico', cursive; 
 }
 
 /** Larger Screens - desktops and tablets **/
