--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -34,12 +34,12 @@ core-header-panel {
 	height: 100%;
   overflow: auto;
   -webkit-overflow-scolling: touch;
-  background-color: #e0e4cc;
+  background-color: #f38630;
 }
 
 core-toolbar {
 	font-weight: 400;
-	background-color: #372312;
+	background-color: #69d2e7;
 	color: white;
 }
 
@@ -47,19 +47,19 @@ core-toolbar {
 	width: 80%;
 	margin: 24px auto;
 	text-align: center;
-	color: #372312;
+	color: #e0e4cc;
 }
 
 .banner-fab {
   margin: 24px auto;
   color: #e5e5e5;
-  background: #372312;
+  background: #69d2e7;
   -webkit-animation-iteration-count: 3;
   animation-iteration-count: 3;
 }
 
 .banner-fab::shadow #ripple {
-    color: #372312;
+    color: #e5e5e5;
 }
 
 .title {
