--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -34,7 +34,7 @@ core-header-panel {
 	height: 100%;
   overflow: auto;
   -webkit-overflow-scolling: touch;
-  background-color: #f38630;
+  background-color: #ffa000;
 }
 
 core-toolbar {
@@ -51,7 +51,7 @@ core-toolbar paper-icon-button {
 	width: 80%;
 	margin: 24px auto;
 	text-align: center;
-	color: #e0e4cc;
+	color: #ffffff;
 }
 
 .banner-fab {
