Add radius to the projects cards, fix main.css selector for guides-list__item, remove change from components.css.

--- a/app/styles/components/components.css
+++ b/app/styles/components/components.css
@@ -2945,7 +2945,7 @@ object {
 
 .guides-list__item {
   padding: 0;
-  background: #f4ff81;
+  background: #ffffff;
   margin-top: 26px;
   margin-bottom: 0;
 }
