--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -80,15 +80,17 @@ core-toolbar paper-icon-button {
 
 }
 
-.guides-section{
-  background: #1FDA9A;
-}
-
 .xxlarge{
   color: #1a237e;
 }
-.guides-list_item p{
+
+.guides-section {
+  background: #1FDA9A;
+}
+
+.guides-list__item {
   background: #f4ff81;
+  border-radius: 6px;
 }
 
 /** Larger Screens - desktops and tablets **/
