Remove paper shadow in the while swtiching to card.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -93,6 +93,9 @@ core-toolbar paper-icon-button {
   border-radius: 6px;
 }
 
+.primary-content {
+  padding-bottom: 20px;
+}
 /** Larger Screens - desktops and tablets **/
 @media all and (min-width: 990px) {
   main {
