enhanced the paper-shadow elements and border-radius

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -94,6 +94,7 @@ core-toolbar paper-icon-button {
 
 .guides-list__item {
   background: #f4ff81;
+  border-radius: 10px;
 }
 
 /** Larger Screens - desktops and tablets **/
