--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,169 +23,47 @@ $break-small: 360px;
 
 html,
 body {
-  width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
+  background-color: #333;
 }
 
 body {
   position: relative;
   font-family: alegreya, serif;
   font-weight: 400;
-  min-height: 100%;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
   align-items: center;
 }
 
-.main-container {
-}
-
-.top {
-  background-color: #fff;
-}
-
-.top, .bottom {
-  flex: 1 0 auto;
-}
-
-.content-container {
-  position: relative;
+.banner {
   width: 100%;
-  background-color: $colorPrimary;
-  display: flex;
-  justify-content: center;
-  flex: 0 0 auto;
-
-  &:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-color: #fff;
-    width: 100%;
-
-    height: $avatarSize / 2 + $avatarBorder + $mainPadding;
-    @include respond-to(handhelds) {
-      height: $avatarSizeSmall / 2 + $avatarBorderSmall + $mainPadding;
-    }
-  }
+  height: 337px;
+  background-image: url(http://localhost:3000/images/banner.jpg);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-  .content {
-    position: relative;
-    padding: $mainPadding;
-    width: 300px;
-    color: rgba(#fff, 0.75);
-    display: flex;
-    flex-direction: column;
+.content {
+  height: 100%;
+  background-color: #444;
+}
 
-    font-size: 28px;
-    @include respond-to(handhelds) { font-size: 24px; }
+p {
+  color: #eee;
+  font-family: 'Alegreya';
+  font-size: 92px;
+  text-shadow: 0 4px 0 rgba(#000, 0.1);
+}
 
-    line-height: 32px;
-    @include respond-to(handhelds) { line-height: 28px; }
-
-    a {
-      display: inline-block;
-      position: relative;
-      font-weight: 700;
-      color: #fff;
-      text-decoration: none;
-      -webkit-transition: -webkit-transform 0.1s ease-out,
-          text-shadow 0.1s ease-out,
-          -webkit-filter 0.1s ease-out;
-      transition: transform 0.1s ease-out,
-          text-shadow 0.1s ease-out,
-          -webkit-filter 0.1s ease-out,
-          -moz-filter 0.1s ease-out,
-          filter 0.1s ease-out;
-      transform: translateY(0);
-      text-shadow: 0 0 0 rgba(#000, 0);
-
-      &:hover {
-        transform: translateY(-2px);
-        text-shadow: 0 4px 0 rgba(#000, 0.1);
-      }
-    }
-
-    p:first-of-type {
-      margin-top: 32px;
-      @include respond-to(handhelds) { margin-top: 24px; }
-    }
-
-    p:last-of-type {
-      margin-bottom: 40px;
-      @include respond-to(handhelds) { margin-bottom: 32px; }
-    }
-
-    p {
-      text-align: center;
-      margin: 16px 0;
-      @include respond-to(handhelds) { margin: 8px; }
-    }
-  }
-
-  .avatar {
-    width: $avatarSize;
-    height: $avatarSize;
-    @include respond-to(handhelds) {
-      width: $avatarSizeSmall;
-      height: $avatarSizeSmall;
-    }
-
-    background: url(../images/avatar.png);
-    background-size: cover;
-    border-radius: 50%;
-    background-color: #525252;
-    // box-shadow: 0 2px 2px rgba(#000, 0.2),
-    //             0 4px 32px rgba(#000, 0.1);
-    align-self: center;
-
-    border: $avatarBorder solid white;
-    @include respond-to(handhelds) {
-      border: $avatarBorderSmall solid white;
-    }
-  }
-
-  .icons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    margin: 0 -8px; /* account for extra icon padding */
-    @include respond-to(handhelds) { margin: 0; }
-
-    a {
-      display: block;
-      width: 32px;
-      height: 32px;
-      padding: 8px; /* make the touch target bigger */
-
-      background-repeat: no-repeat;
-      background-position: 50% 50%;
-
-      background-size: 32px 32px;
-      @include respond-to(handhelds) { background-size: 24px 24px; }
-
-      filter: drop-shadow(0 0 0 rgba(#000, 0));
-      &:hover {
-        filter: drop-shadow(0 4px 0 rgba(#000, 0.1));
-      }
-    }
-
-    $links: twitter github googleplus email;
-    @each $link in $links {
-      .#{$link} { background-image: url(../images/icon_#{$link}.svg); }
-    }
-  }
-
-.bottom {
+.banner-title {
+  padding-top: 182px;
+  position: absolute;
   width: 100%;
-  background-color: $colorPrimary;
+  text-align: center;
+  top: 0;
+  z-index: 1;
+}
+
+.tab-icon {
+  border-image: url(http://localhost:3000/images/apps.svg);
 }
