--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -37,10 +37,21 @@ body {
 }
 
 .banner {
-  width: 100%;
-  height: 337px;
-  background-image: url(http://localhost:3000/images/banner.jpg);
-  background-color: rgba(0, 0, 0, 0.5);
+  width:100%;
+  height:337px;
+  display:block;
+  opacity:1;
+  position:relative;
+  background-repeat:no-repeat;
+  background-position:center;
+  background-size:cover,0,0,0;
+  background-image: url(http://localhost:3000/images/banner.png);
+}
+
+.overlay {
+    background:rgba(0,0,0,.4);
+    width:100%;
+    height:100%
 }
 
 .content {
@@ -56,7 +67,7 @@ p {
 }
 
 .banner-title {
-  padding-top: 190px;
+  padding-top: 168px;
   position: absolute;
   width: 100%;
   text-align: center;
