--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -94,5 +94,12 @@ p {
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: #ff0000;
+  background-color: #eee;
+}
+
+.card {
+  position: absolute;
+  height: 50%;
+  width: 50%;
+  background-color: #000;
 }
