Added the place holder images

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -102,20 +102,6 @@ p {
   float: left;
   height: 50%;
   width: 50%;
+  color: #ccc;
 }
 
-.red {
-  background-color: #ff0000;
-}
-
-.green {
-  background-color: #00ff00;
-}
-
-.blue {
-  background-color: #0000ff;
-}
-
-.black {
-  background-color: #000000;
-}
