Add padding and margin.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -103,5 +103,10 @@ p {
   height: 50%;
   width: 50%;
   color: #ccc;
+  padding-bottom: 16px;
 }
 
+.screenshot {
+  margin-left: 16px;
+  margin-top: 16px;
+}
