--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -44,7 +44,7 @@ body.open {
   position: fixed;
   top: 0;
   left: 0;
-  background-image: url(http://localhost:3001/images/banner.png);
+  background-image: url(../images/banner.png);
   background-repeat:no-repeat;
   background-position:center;
   background-size:cover,0,0,0;
